gccida/c0/print_rtl_graph_with_bb
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:698:25: error: expected expression
print_rtl_graph_with_bb::bb_state v3; // esi 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:719:25: error: expected expression
print_rtl_graph_with_bb::bb_state *in_bb_p; // [rsp+58h] [rbp-68h] 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:719:1: error: redefinition of label 'print_rtl_graph_with_bb'
print_rtl_graph_with_bb::bb_state *in_bb_p; // [rsp+58h] [rbp-68h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:698:1: note: previous definition is here
print_rtl_graph_with_bb::bb_state v3; // esi 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:754:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)xmalloc( 4LL * max_uid); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:754:36: error: expected ')'
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)xmalloc( 4LL * max_uid); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:754:11: note: to match this '('
in_bb_p = ( print_rtl_graph_with_bb::bb_state *)xmalloc( 4LL * max_uid); 
          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:759:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p[i] = NOT_IN_BB_0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:759:14: error: use of undeclared identifier 'NOT_IN_BB_0'
in_bb_p[i] = NOT_IN_BB_0; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:768:1: error: use of undeclared identifier 'v3'
v3 = IN_MULTIPLE_BB_0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:768:6: error: use of undeclared identifier 'IN_MULTIPLE_BB_0'
v3 = IN_MULTIPLE_BB_0; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:769:6: error: use of undeclared identifier 'in_bb_p'
if ( in_bb_p[x->fld[0].rtint] == NOT_IN_BB_0 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:769:34: error: use of undeclared identifier 'NOT_IN_BB_0'
if ( in_bb_p[x->fld[0].rtint] == NOT_IN_BB_0 ) 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:770:1: error: use of undeclared identifier 'v3'
v3 = IN_ONE_BB_0; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:770:6: error: use of undeclared identifier 'IN_ONE_BB_0'
v3 = IN_ONE_BB_0; 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:771:1: error: use of undeclared identifier 'in_bb_p'
in_bb_p[x->fld[0].rtint] = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:771:28: error: use of undeclared identifier 'v3'
in_bb_p[x->fld[0].rtint] = v3; 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/graph.c:868:7: error: use of undeclared identifier 'in_bb_p'
free( in_bb_p); 
      ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/print_rtl_graph_with_bb/src/obj/graph.o] Error 1
